--- a/UmakeIt/src/app/menu/menu.component.html
+++ b/UmakeIt/src/app/menu/menu.component.html
@@ -2,7 +2,7 @@
 <router-outlet></router-outlet>
 <body>
   
-  
+
   <table class="table table-dark">
   <thead>
     <tr>
@@ -13,23 +13,36 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let plato of platos">
+    <tr *ngFor="let item of item">
       <th scope="row"></th>
-      <td>{{plato.nombre}}</td>
-      <td>Precio: {{plato.precio}}  Bss</td>
-      <td>{{plato.img}}</td>
-      <td><input type="submit" value="Agregar"></td>
-      <td><input type="submit" value="Editar"></td>
-      <td><input type="submit" value="Eliminar"></td>
+      <td>{{item.nombre}}</td>
+      <td>Precio: {{item.precio}}  Bss</td>
+      <td></td>
+     <!-- <td><input type="submit" value="Agregar"></td>-->
+      <td><button (click)="editPlato($event, item)">Editar</button></td>
+      <td><button (click)="deletePlato($event, item)">Eliminar</button></td>
     </tr>
   </tbody>
 </table>
-<form (ngSubmit)="Agregar()" >
+
+
+
+<form (ngSubmit)="agregar(formNew)" #formNew="ngForm">
   <h2>Agregar Producto</h2>
-  <input type="text" placeholder="&#128272; Nombre" name="nombre" [(ngModel)]="platos.nombre">
-  <input type="text" placeholder="&#128272; Precio" name="precio" [(ngModel)]="platos.precio">
+  <input type="text" placeholder="&#128272; Nombre" name="nombre" [(ngModel)]="platos.nombre" #nombre=ngModel>
+  <input type="text" placeholder="&#128272; Precio" name="precio" [(ngModel)]="platos.precio" #precio=ngModel>
   <button type="submit" >Agregar Producto</button>
  
   
 </form>
+
+<!--Formulario para editar-->
+
+<form  (ngSubmit)="updatePlato(item)">
+  <h2>Editar Producto</h2>
+  <input type="text" placeholder="&#128272; Nombre" name="nombre" [(ngModel)]="platoEdit.nombre" #nombre=ngModel>
+  <input type="text" placeholder="&#128272; Precio" name="precio" [(ngModel)]="platoEdit.precio" #precio=ngModel>
+  <button type="submit" >Actualizar Producto</button>
+ </form>
+
 </body>
